# paperswithcode-notification

./: .gitignore  README.md  docker-compose.yml  env.template  get_trend.py  pyproject.toml
docker/: Dockerfile  cron.conf  supervisord.conf
